src/test/pass/nested_unary.j
class Main {
    Void main() {
        Int i;
        i = -(-(-(-(-(1)))));
    }
}
