src/test/fail/main_return_type_mismatch.j
class Main {
    Void main() {
        return 1;
    }
}
